# bleak

./: CMakeLists.txt  README.md  README.txt
Examples/bleakFSA/: CMakeLists.txt  FSA.sad  bleakFSADemo.cpp
Examples/bleakLogisticRegression/: CMakeLists.txt  bleakLogisticRegressionDemo.cpp  logisticRegression.sad
Examples/bleakRegression/: 1Layer_test.sad  1Layer_train.sad  2Layer_test.sad  2Layer_train.sad  CMakeLists.txt  bleakRegressionDemo.cpp
Experiments/: ExtractTestErrors.awk  PlotLossMNIST.gnuplot  PlotLossUCI.gnuplot  profile.sh.example
Experiments/CompareFerns/hackedSubgraphs/: SGFerns.sad
Experiments/CompareFerns/letter/: ConfigTrain.sad  MakeGraphs.sh  SGFernsGraph.sad  Test.sad  TestAll.sh  Train.sad  TrainAll.sh  Training.ini  ValidateAndTest.txt  ValidateAndTestAll.sh  Validation.sad
Experiments/CompareFerns/mnist/: 1000_10_TestLossVsItr.txt  100_10_TestLossVsItr.txt  ConfigTest.sad  ConfigTrain.sad  MakeGraphs.sh  SGFernsGraph.sad  TestAll.sh  Train.sad  TrainAll.sh  Training.ini  ValidateAndTest.txt  ValidateAndTest1000.txt
Experiments/CompareFerns/usps/: ConfigTrain.sad  ConfigValidation.sad  MakeGraphs.sh  Test.sad  TestAll.sh  Train.sad  Training.ini  ValidateAndTest.txt  Validation.sad
Experiments/CompareTrees/letter/: ConfigTest.sad  ConfigValidation.sad  SGForestGraph.sad  Test.sad  TestAll.sh  Train.sad  TrainAll.sh  ValidateAndTest.txt  Validation.sad
Experiments/CompareTrees/mnist/: 1000_10_TestLossVsItr.txt  100_10_TestLossVsItr.txt  MakeGraphs.sh  PlotValidation.sh  SGForestGraph.sad  Test.sad  TestAll.sh  Train.sad  TrainAll.sh  ValidateAndTest.txt  ValidateAndTest1000.txt  ValidateAndTestAll.sh  Validation.sad
Experiments/CompareTrees/usps/: ConfigTest.sad  Test.sad  TestAll.sh  Train.sad  TrainAll.sh  ValidateAndTest.txt  ValidateAndTestAll.sh  Validation.sad
Experiments/Data/ProstateX/: makeSeriesLists.sh  makeTrainingData.sh
Experiments/Data/abalone/: Get.sh  MakeDB.sh  mappings.ini
Experiments/Data/abalone_reg/: MakeDB.sh  mappings.ini
Experiments/Data/cifar/: Get.sh  MakeDB.sh
Experiments/Data/eeg/: Get.sh  MakeData.sh  MakeIndexFunc.awk  ShuffleLists.awk  SplitData.awk  alcoholicTestLabels.csv  alcoholicTestList.txt  alcoholicTrainLabels.csv  alcoholicTrainList.txt  alcoholicValidationLabels.csv  alcoholicValidationList.txt  conditionTestLabels.csv  conditionTestList.txt  conditionTrainLabels.csv  conditionTrainList.txt  conditionValidationLabels.csv  conditionValidationList.txt
Experiments/Data/har/: Get.sh  MakeDB.sh
Experiments/Data/iris/: Get.sh  MakeDB.sh  mappings.ini
Experiments/EEG/: Config.sad  ConfigTestAlcoholic.sad  ConfigTrainAlcoholic.sad  ConfigValidationAlcoholic.sad  SGEEGLoader.sad
Modules/Common/: Accuracy.cpp  Accuracy.h  AdaGrad.cpp  AdaGrad.cu  AdaGrad.h  Adam.cpp  Adam.cu  Adam.h  ArithmeticOperation.cpp  ArithmeticOperation.h  Array.cpp  Array.cu  Array.h  Average.cpp  Average.h  BatchNormalization.cpp  BatchNormalization.cu  BatchNormalization.h  BlasWrapper.h  CMakeLists.txt  Common.cpp  Common.h  Concatenate.cpp  Concatenate.h  CsvReader.cpp  CsvReader.h  CuBlasWrapper.cpp  CuBlasWrapper.h  Database.h  DatabaseFactory.cpp  DatabaseFactory.h  DatabaseReader.cpp  DatabaseReader.h  Edge.cpp  Edge.h  Factory.h  Graph.cpp  Graph.h  HingeLoss.cpp  HingeLoss.h  (+60 more)
Modules/Common/Parser/: GraphGrammar.y  GraphLexer.l  Makefile  bleak_expression.cpp  bleak_expression.h  bleak_graph_ast.c  bleak_graph_ast.h  bleak_parser.c  bleak_parser.h  bleak_vector.cpp  bleak_vector.h  lex.yy.c  lex.yy.h  y.tab.c  y.tab.h
Modules/Common/Subgraphs/: SGBatchNormalization.sad  SGInnerProduct.sad  SGSum.sad
Modules/Cudnn/: CMakeLists.txt  CudnnCommon.cpp  CudnnCommon.h  CudnnConvolution.cpp  CudnnConvolution.h  CudnnPooling.cpp  CudnnPooling.h  InitializeCudnnModule.cpp
Modules/Exotic/: CMakeLists.txt  HellingerLoss.cpp  HellingerLoss.h  InitializeExoticModule.cpp  SignedLikelihoodAccuracy.cpp  SignedLikelihoodAccuracy.h
Modules/ITK/: CMakeLists.txt  CompressedDatabaseReader.cpp  CompressedDatabaseReader.h  ITKImageLoader.cpp  ITKImageLoader.h  InitializeITKModule.cpp
Modules/Image/: CMakeLists.txt  Convolution.cpp  Convolution.h  Convolution2D.cpp  Convolution2D.h  ConvolutionNaive.cpp  ConvolutionNaive.h  ImageToMatrix.cpp  ImageToMatrix.cu  ImageToMatrix.h  InitializeImageModule.cpp  NearestNeighborResample.cpp  NearestNeighborResample.cu  NearestNeighborResample.h  Pooling.cpp  Pooling.cu  Pooling.h
Modules/Image/Subgraphs/: SGConvolution1D.sad  SGConvolution2D.sad
Modules/Logic/: CMakeLists.txt  InitializeLogicModule.cpp  LeftShift.cpp  LeftShift.h  LogicCommon.h  LogicInnerProduct.cpp  LogicInnerProduct.h  LogicOperation.cpp  LogicOperation.h  MaskParameters.cpp  MaskParameters.h  PlusXorLoss.cpp  PlusXorLoss.h
Modules/Logic/Subgraphs/: SGAdder1.sad  SGAdder2.sad  SGAdder4.sad  SGAdder8.sad  SGInnerProductPlusAnd.sad  SGInnerProductPlusOr.sad
Modules/Trees/: CMakeLists.txt  FeatureSelectionAnnealing.cpp  FeatureSelectionAnnealing.h  HingeTreeCommon.cpp  HingeTreeCommon.cu  HingeTreeCommon.cuh  HingeTreeCommon.h  HingeTreeConv.cpp  HingeTreeConv.cu  HingeTreeConv.h  InitializeTreesModule.cpp  RandomHingeFerns.cpp  RandomHingeFerns.h  RandomHingeForest.cpp  RandomHingeForest.cu  RandomHingeForest.h  TreeL2Regularization.cpp  TreeL2Regularization.h  TreeLorenzLoss.cpp  TreeLorenzLoss.h
Modules/Trees/Subgraphs/: SGFSA.sad  SGFerns.sad  SGForest.sad  SGHingeFernConv2D.sad  SGHingeTreeConv2D.sad
Pictures/GraphViz/: README.txt
Tools/bleakMakeDatabase/: CMakeLists.txt  bleakMakeDatabase.cpp
Tools/bleakMakeDatabaseCIFAR/: CMakeLists.txt  bleakMakeDatabaseCIFAR.cpp
Tools/bleakMakeDatabaseMNIST/: CMakeLists.txt  bleakMakeDatabaseMNIST.cpp
Tools/bleakMakeEEGImage/: CMakeLists.txt  bleakMakeEEGImage.cpp
Tools/bleakProstateXTool/: CMakeLists.txt  ProstateXCommon.cpp  ProstateXCommon.h  bleakEvaluateProstateX.cpp  bleakProstateXTool.cpp
Tools/bleakSadToDot/: CMakeLists.txt  bleakSadToDot.cpp
Tools/bleakTool/: CMakeLists.txt  bleakTool.cpp
cmake/: bleakModuleMacros.cmake
(+158 files in other folders)
